Modify tmux configuration and key bindings
Updated key bindings and configuration paths in .tmux.conf.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/.tmux.conf
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
@@ -17,6 +17,12 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
+unbind %
+bind | split-window -h -c "#{pane_current_path}"
+
+unbind '"'
+bind - split-window -v -c "#{pane_current_path}"
+
 # set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
@@ -32,3 +38,20 @@ set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g status-style bg=default
+
+# copymode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# window-management
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+# ... (continues through M-9)
